welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: ';' expected but integer literal found.
				pas 8 }
                                    ^