welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var pas = 0
while (!estFaceMur) { avance()
				pas 8 }




